# nautilus-extension

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.DB66EA30E7E9BE5D.idx
include/: CreateFileExtension.hpp  create_file_extension_logic.hpp
src/: CreateFileExtension.cpp  create_file_extension_logic.cpp
